[package]
name = "rustsat"
version = "0.4.0"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "This library aims to provide implementations of elements commonly used in the development on software in the area of satisfiability solving. The focus of the library is to provide as much ease of use without giving up on performance."
keywords = ["sat", "satisfiability", "encodings"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.25", optional = true, features = ["zlib-ng"], default-features = false }
xz2 = { version = "0.1.7", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
cpu-time = "1.0.0"
rand = { version = "0.8.5", optional = true }
visibility = { version = "0.1.0" }
thiserror = { version = "1.0.50" }
pyo3 = { version = "0.20.0", optional = true, features = ["extension-module", "abi3", "abi3-py37"] }

[build-dependencies]
cbindgen = "0.26.0"
pyo3-build-config = { version = "0.20.0", optional = true }

[dev-dependencies]
inline-c = "0.1.7"

[features]
default = [
  "optimization",
  "fxhash"
]
internals = []
fxhash = ["dep:rustc-hash"]
ipasir = []
optimization = []
multiopt = ["optimization"]
compression = ["dep:bzip2", "dep:flate2", "dep:xz2"]
rand = ["dep:rand"]
bench = []
pyapi = ["dep:pyo3", "dep:pyo3-build-config"]
all = [
  "multiopt",
  "compression",
  "rand",
  "fxhash",
  "pyapi"
]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[example]]
name = "profiling"
