[package]
name = "rustsat"
version = "0.5.1"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "This library aims to provide implementations of elements commonly used in the development on software in the area of satisfiability solving. The focus of the library is to provide as much ease of use without giving up on performance."
keywords = ["sat", "satisfiability", "encodings"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.25", optional = true, features = [
  "zlib-ng",
], default-features = false }
xz2 = { version = "0.1.7", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
cpu-time = "1.0.0"
rand = { version = "0.8.5", optional = true }
visibility = { version = "0.1.0" }
anyhow = { version = "1.0.80" }
thiserror = { version = "1.0.50" }

[dev-dependencies]
rustsat-minisat = { path = "../minisat" }
rustsat-tools = { path = "../tools" }

[features]
default = ["optimization", "fxhash"]
internals = []
fxhash = ["dep:rustc-hash"]
optimization = []
multiopt = ["optimization"]
compression = ["dep:bzip2", "dep:flate2", "dep:xz2"]
rand = ["dep:rand"]
bench = []
ipasir-display = []
all = ["multiopt", "compression", "rand", "fxhash"]

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "profiling"
