[package]
name = "rustsat-solvertests"
description = "Test code shared between sat solver crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
rustsat = { version = "0.5.1", path = "../rustsat", default-features = false }
proc-macro2 = "1.0"
