[package]
name = "rustsat-solvertests"
description = "Test code shared between sat solver crates"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# This is only a dev dependency in this repo
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
rustsat.workspace = true
