[package]
name = "rustsat-tools"
version = "0.3.2"
edition = "2021"
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license = "MIT"
description = "Tools and examples built on the RustSAT library"
keywords = ["rustsat", "sat", "satisfiability"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsat = { version = "0.5.1", path = "../rustsat", features = [
  "compression",
  "multiopt",
  "rand",
  "internals",
] }
rustsat-cadical = { version = "0.3.2", path = "../cadical", optional = true }
rustsat-minisat = { version = "0.3.2", path = "../minisat", optional = true }
clap = { version = "4.2.4", features = ["derive", "cargo"] }
concolor-clap = { version = "0.1.0" }
termcolor = { version = "1.2.0" }
atty = { version = "0.2.14" }
nom = "7.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = { version = "1.0.80" }

[features]
default = ["minisat"]
minisat = ["dep:rustsat-minisat"]
cadical = ["dep:rustsat-cadical"]

[[bin]]
name = "enumerator"

[[bin]]
name = "cnf2opb"

[[bin]]
name = "opb2cnf"

[[bin]]
name = "wcnf2opb"

[[bin]]
name = "opb2wcnf"

[[bin]]
name = "mcnf2opb"

[[bin]]
name = "opb2mcnf"

[[bin]]
name = "shuffledimacs"

[[bin]]
name = "gbmosplit"

[[bin]]
name = "encodings"
