[package]
name = "rustsat-tools"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Tools and examples built on the RustSAT library"
keywords = ["rustsat", "sat", "satisfiability"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
rust-version = "1.70.0"
include = ["LICENSE", "CHANGELOG.md", "README.md", "/src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
concolor-clap.workspace = true
itertools.workspace = true
nom.workspace = true
termcolor.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rustsat = { workspace = true, features = [
  "compression",
  "multiopt",
  "rand",
  "internals",
] }
rustsat-cadical = { workspace = true, optional = true }
rustsat-minisat = { workspace = true, optional = true }

[features]
default = ["minisat"]
minisat = ["dep:rustsat-minisat"]
cadical = ["dep:rustsat-cadical"]
