[package]
name = "rustsat-tools"
version.workspace = true
edition.workspace = true
authors = ["Christoph Jabs <christoph.jabs@helsinki.fi>"]
license.workspace = true
description = "Tools and examples built on the RustSAT library"
keywords = ["rustsat", "sat", "satisfiability"]
repository = "https://github.com/chrjabs/rustsat"
readme = "README.md"
include = ["LICENSE", "CHANGELOG.md", "README.md", "/src/"]
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# keep-sorted start block=yes
anyhow.workspace = true
chacha20.workspace = true
clap.workspace = true
concolor-clap.workspace = true
itertools.workspace = true
rand.workspace = true
rustsat = { workspace = true, features = [
  "compression",
  "multiopt",
  "rand",
  "_internals",
] }
rustsat-cadical = { workspace = true, optional = true }
rustsat-minisat = { workspace = true, optional = true }
termcolor.workspace = true
winnow.workspace = true
# keep-sorted end

[features]
default = ["minisat"]
minisat = ["dep:rustsat-minisat"]
cadical = ["dep:rustsat-cadical"]
_test = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
